restructure some things

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,8 @@
 srpm:
-	dnf -y install kernel-rpm-macros
-	#rpkg srpm --outdir=$(outdir) --spec=$(spec)/hello.spec
+	dnf -y install kernel-rpm-macros rpkg
 	ls -lah .
 	ls -lah $(spec)/
-	rpkg srpm --outdir=$(outdir)
+	ls -lah $(outdir)/
+	cp Kbuild $(outdir)/
+	cp main.c $(outdir)/
+	rpkg srpm --outdir=$(outdir)/ --spec=$(spec)/hello.spec
